Fixes issue where sidebar flashes white on collapse.

--- a/client/stylesheets/tree.scss
+++ b/client/stylesheets/tree.scss
@@ -1,6 +1,7 @@
 .outer-tree-wrap {
   height: 100%;
   transition: width 350ms;
+  background-color: #21252b;
 }
 
 .inner-tree-wrap {
